feat:create 5.41.2 release notes

--- a/docs/release-notes/5.41.2/changelog.mdx
+++ b/docs/release-notes/5.41.2/changelog.mdx
@@ -6,14 +6,21 @@ description: See what's new in Webiny version 5.41.2
 
 import multiValueRenderers from "./assets/multi-value-renderers.png";
 import lexicalEditorTheme from "./assets/lexical-editor-theme.png";
+import persistedSnackbars from "./assets/persisted-snackbars.png";
+import firstDeployment from "./assets/first-deployment-msg.png";
+import errorLoggingEventHandlers from "./assets/error-logging-event-handlers.png";
 
 <GithubRelease version={"5.41.2"} />
 
 ## Headless CMS
 
-### Persist Error Snackbars ([#4392](https://github.com/webiny/webiny-js/pull/4392))
+### Persisted Error Messages ([#4392](https://github.com/webiny/webiny-js/pull/4392))
 
-✍️
+Up until now, error messages in the Admin UI would disappear after a short period of time, making it difficult for users to read and understand them.
+
+With this change, error snackbars will now persist until the user dismisses them.
+
+<Image src={persistedSnackbars} alt="Persisted Error Snackbars" />
 
 ### Improve Multi-Value Field Renderers ([#4404](https://github.com/webiny/webiny-js/pull/4404))
 
@@ -29,7 +36,9 @@ We've fixed a bug where errors from the API were not correctly formatted, and we
 
 ## Page Builder
 
-### Use Correct Keys Upon Applying Border Radius Separately ([#4369](https://github.com/webiny/webiny-js/pull/4369))
+### Fixed Applying Separate Border Radius Values ([#4369](https://github.com/webiny/webiny-js/pull/4369))
+
+We've fixed an issue where, in the Page Builder's page editor, applying separate border radius values (top left, top right, bottom right, bottom left) to a page element would not work as expected. This has now been addressed.
 
 ### Expose New Page Element Control Overlay Features ([#4396](https://github.com/webiny/webiny-js/pull/4396))
 
@@ -41,17 +50,55 @@ We've also introduced a new Page Editor hook, called `useMoveElement`, which giv
 
 ### Website Cloudfront Distributions - Ignore Changes In `staging` Property ([#4401](https://github.com/webiny/webiny-js/pull/4401))
 
-✍️
+Upon deploying Admin and Website applications, Webiny deploys a couple of Cloudfront distributions. Once initially deployed, during subsequent deployments, the distributions are only updated with the new changes. They are never recreated from scratch.
+
+<Alert>
+
+  Learn more about Webiny's cloud architecture in the [Cloud Architecture](/docs/architecture/introduction) documentation.
+
+</Alert>
+
+However, with the introduction of the new Pulumi version and because of a change in the way Pulumi handles the [`staging`](https://www.pulumi.com/registry/packages/aws/api-docs/cloudfront/distribution/#staging_nodejs) property, the Cloudfront distributions would actually be recreated on the next deployment, which is certainly not the desired behavior. Especially if a custom domain was already associated with the distribution.
+
+To fix this, we had to internally instruct Pulumi to ignore changes in the `staging` property, which will prevent the distributions from being recreated.
+
+
+<Alert type={"warning"}>
+
+  To this day, we've neved seen anybody relying on the `stating` property, so we're confident this change won't affect anyone. Still, if you are using it, please do give us a shout via our [community Slack](https://www.webiny.com/slack).
+
+</Alert>
+
 
 ### Skip "First Deployment" Check When In CI Environment ([#4408](https://github.com/webiny/webiny-js/pull/4408))
 
-✍️
+When users deploy their project for the first time via the [`webiny deploy`](/docs/core-development-concepts/basics/project-deployment) command, Webiny shows the following short message:
+
+<Image src={firstDeployment} alt="First Deployment Message" />
+
+And although this message can be helpful when really deploying for the first time from a local environment, it's not really necessary when deploying from a CI environment. In one particular case, we've even seen this message being shown incorrectly, despite the fact that the project was already deployed (more on this in the linked [pull request](https://github.com/webiny/webiny-js/pull/4408)).
+
+To address this, we've simply decided to skip this check when deploying from a CI environment.
 
 ## Other Improvements
 
 ### Lifecycle Event Handlers - Add Error Logging ([#4391](https://github.com/webiny/webiny-js/pull/4391))
 
-✍️
+We've added basic error logging during the execution of lifecycle event handlers.
+
+This will help users debug issues because. Not only will they be able to see the newly added logs in their [Amazon CloudWatch logs](https://webiny.link/cloudwatch), but also, in their browser.
+
+The following example shows a log that happened because of an error that occurred during the [`onEntryBeforePublish`](/docs/headless-cms/references/lifecycle-events#on-entry-before-publish) lifecycle event:
+
+<Image src={errorLoggingEventHandlers} alt="Error Logging Event Handlers" shadow={false}/>
+
+<Alert>
+
+  In case you missed it, with the `DEBUG` env variable set to `true`, all the logs that occur during a single GraphQL HTTP request are actually forwarded to user's browser console.
+
+  To learn more about the `DEBUG` environment variable, check out the [Environment Variables](/docs/core-development-concepts/basics/environment-variables#debug) documentation.
+
+</Alert>
 
 ### Improve Lexical Editor Theme Handling ([#4395](https://github.com/webiny/webiny-js/pull/4395))
 
