feat: release note 5.41.2

--- a/docs/release-notes/5.41.2/changelog.mdx
+++ b/docs/release-notes/5.41.2/changelog.mdx
@@ -12,6 +12,15 @@ description: See what's new in Webiny version 5.41.2
 
 ✍️
 
+### Define Columns for Object and Dynamic Zone Fields in Entry List Table ([#4388](https://github.com/webiny/webiny-js/pull/4388))
+
+This release introduces a major update to the Headless CMS entry list table, enabling developers to define columns for complex field types. This enhancement brings greater flexibility and customization while maintaining optimal performance.
+
+Previously, the entry list table supported only simple field types: `text`, `number`, `boolean`, `file`, `long-text`, `ref`, `datetime`.
+
+Now, developers can define columns for complex fields such as `object` and `dynamicZone`.
+
+
 ## Page Builder
 
 ### Use Correct Keys Upon Applying Border Radius Separately ([#4369](https://github.com/webiny/webiny-js/pull/4369))
@@ -33,3 +42,25 @@ description: See what's new in Webiny version 5.41.2
 ### Lifecycle Event Handlers - Add Error Logging ([#4391](https://github.com/webiny/webiny-js/pull/4391)) 
 
 ✍️
+
+### Improved Trash Bin Emptying for Multi-Tenant Instances ([#4351](https://github.com/webiny/webiny-js/pull/4351))
+
+When clearing deleted entries in environments with multiple tenants, parallel deletion tasks often led to errors due to resource contention and excessive parallelization.
+
+This update consolidates the deletion process into a single task that iterates through all tenants, locales, and models sequentially. By processing eligible entries in series, the system ensures stability and improved performance, particularly for instances with a large number of tenants or locales.
+
+This change enhances the robustness of the trash bin emptying operation and prevents potential failures caused by overly aggressive parallel task execution.
+
+### Improve Editor Experience with Current Page List Information ([#4397](https://github.com/webiny/webiny-js/pull/4397))
+
+This update provides editors with additional insights into the data they are working with, improving usability and overall efficiency.
+
+Editors will now see:
+* **Total Entries Count**: displays the total number of entries matching the current query or folder.
+* **Current Entries Length**: a real-time indicator of the number of entries currently loaded in the interface.
+
+This enhancement has been rolled out to the following applications:
+* Headless CMS
+* Page Builder
+* File Manager
+
