feat:create 5.41.2 release notes

--- a/docs/release-notes/5.41.2/changelog.mdx
+++ b/docs/release-notes/5.41.2/changelog.mdx
@@ -9,6 +9,7 @@ import lexicalEditorTheme from "./assets/lexical-editor-theme.png";
 import persistedSnackbars from "./assets/persisted-snackbars.png";
 import firstDeployment from "./assets/first-deployment-msg.png";
 import errorLoggingEventHandlers from "./assets/error-logging-event-handlers.png";
+import roundedBordersFix from "./assets/rounded-borders-fix.png";
 
 <GithubRelease version={"5.41.2"} />
 
@@ -42,18 +43,25 @@ Previously, the entry list table supported only simple field types: `text`, `num
 
 Now, developers can define columns for complex fields such as `object` and `dynamicZone`.
 
-
 ## Page Builder
 
 ### Fixed Applying Separate Border Radius Values ([#4369](https://github.com/webiny/webiny-js/pull/4369))
 
 We've fixed an issue where, in the Page Builder's page editor, applying separate border radius values (top left, top right, bottom right, bottom left) to a page element would not work as expected. This has now been addressed.
 
+<Image src={roundedBordersFix} alt="Fixed Applying Separate Border Radius Values" />
+
 ### Expose New Page Element Control Overlay Features ([#4396](https://github.com/webiny/webiny-js/pull/4396))
 
 Developers can now hook into the page element control overlay using component decoration, and control several new props: `canDrag`, `canEdit`, `canHighlight`, and `canActivate`. This allows developers to customize each element behaviour based on user's permissions, page properties, etc.
 
 We've also introduced a new Page Editor hook, called `useMoveElement`, which gives developers a simple API to move elements up, down, left, or right, within the parent element.
+
+### Button Links Now Redirect Without Full Page Reload ([#4403](https://github.com/webiny/webiny-js/pull/4403))
+
+In general, when users click on adjacent internal links on pages created with Page Builder, they should be redirected without a full page reload. However, this was not working as expected when users clicked on links created via the **Button** page element.
+
+This issue has now been fixed, and button links will now redirect users without a full page reload.
 
 ## Deployments
 
