feat: headless cms dynamic zone storage transform

--- a/docs/release-notes/5.41.3/changelog.mdx
+++ b/docs/release-notes/5.41.3/changelog.mdx
@@ -32,3 +32,11 @@ To fix this, we had to internally instruct Pulumi to ignore changes in the `stag
   To this day, we've neved seen anybody relying on the `stating` property, so we're confident this change won't affect anyone. Still, if you are using it, please do give us a shout via our [community Slack](https://www.webiny.com/slack).
 
 </Alert>
+
+## Headless CMS
+
+### Added a Missing Dynamic Zone Storage Transform ([#4399](https://github.com/webiny/webiny-js/pull/4399)
+
+With this patch, we added a missing storage transform was added for the `dynamicZone` field type. A missing storage transform was manifesting an error when trying to save a `dynamicZone` field with a `datetime` field with `without timezone` setting.
+
+Now the system stores the `datetime` field as expected.
