feat:create 5.41.3 release notes

--- a/docs/release-notes/5.41.2/changelog.mdx
+++ b/docs/release-notes/5.41.2/changelog.mdx
@@ -65,7 +65,7 @@ This issue has now been fixed, and button links will now redirect users without 
 
 ## Deployments
 
-### Website Cloudfront Distributions - Ignore Changes In `staging` Property ([#4401](https://github.com/webiny/webiny-js/pull/4401))
+### Amazon Cloudfront Distributions - Ignore Changes In `staging` Property ([#4401](https://github.com/webiny/webiny-js/pull/4401))
 
 Upon deploying Admin and Website applications, Webiny deploys a couple of Cloudfront distributions. Once initially deployed, during subsequent deployments, the distributions are only updated with the new changes. They are never recreated from scratch.
 
