--- a/docs/release-notes/5.41.3/changelog.mdx
+++ b/docs/release-notes/5.41.3/changelog.mdx
@@ -8,35 +8,24 @@ description: See what's new in Webiny version 5.41.3
 
 ## Headless CMS
 
-📝
-
-
-## Deployments
-
-### Website Cloudfront Distributions - Ignore Changes In `staging` Property ([#4414](https://github.com/webiny/webiny-js/pull/4414))
-
-Upon deploying Admin and Website applications, Webiny deploys a couple of Cloudfront distributions. Once initially deployed, during subsequent deployments, the distributions are only updated with the new changes. They are never recreated from scratch.
-
-<Alert>
-
-  Learn more about Webiny's cloud architecture in the [Cloud Architecture](/docs/architecture/introduction) documentation.
-
-</Alert>
-
-However, with the introduction of the new Pulumi version and because of a change in the way Pulumi handles the [`staging`](https://www.pulumi.com/registry/packages/aws/api-docs/cloudfront/distribution/#staging_nodejs) property, the Cloudfront distributions would actually be recreated on the next deployment, which is certainly not the desired behavior. Especially if a custom domain was already associated with the distribution.
-
-To fix this, we had to internally instruct Pulumi to ignore changes in the `staging` property, which will prevent the distributions from being recreated.
-
-<Alert type={"warning"}>
-
-  To this day, we've neved seen anybody relying on the `stating` property, so we're confident this change won't affect anyone. Still, if you are using it, please do give us a shout via our [community Slack](https://www.webiny.com/slack).
-
-</Alert>
-
-## Headless CMS
-
 ### Added a Missing Dynamic Zone Storage Transform ([#4399](https://github.com/webiny/webiny-js/pull/4399)
 
 With this patch, we added a missing storage transform was added for the `dynamicZone` field type. A missing storage transform was manifesting an error when trying to save a `dynamicZone` field with a `datetime` field with `without timezone` setting.
 
 Now the system stores the `datetime` field as expected.
+
+## Deployments
+
+### Amazon Cloudfront Distributions - Further Ignoring Changes In `staging` Property ([#4414](https://github.com/webiny/webiny-js/pull/4414))
+
+With the 5.41.2 release, we released the [Amazon Cloudfront Distributions - Ignore Changes in staging Property](/docs/release-notes/5.41.2/changelog#website-cloudfront-distributions-ignore-changes-in-staging-property-4401) fix. 
+
+However, we missed a few places where the `staging` property was not being ignored. The initial fix was only applying the fix for Amazon CloudFront distributions that are deployed as part of the Website project application. API and Admin CloudFront distributions were not covered by the initial fix.
+
+With this patch, we are now ignoring the `staging` property for all CloudFront distributions.
+
+<Alert>
+
+  For more details on the actual issue and the fix, please refer to the original [Website Amazon Cloudfront Distributions - Ignore Changes in staging Property](/docs/release-notes/5.41.2/changelog#website-cloudfront-distributions-ignore-changes-in-staging-property-4401) changelog item.
+
+</Alert>
