feat:create 5.41.4 release notes

--- a/docs/release-notes/5.41.4/changelog.mdx
+++ b/docs/release-notes/5.41.4/changelog.mdx
@@ -1,4 +1,5 @@
 ---
+id: e9269552
 title: Webiny 5.41.4 Changelog
 description: See what's new in Webiny version 5.41.4
 ---
@@ -7,7 +8,25 @@ description: See what's new in Webiny version 5.41.4
 
 ## Security
 
-### Cognito Federation - Fixed Handling of Groups and Teams ([#4418](https://github.com/webiny/webiny-js/pull/4418))
+### Cognito Federation: Fixed Handling of Identity's Groups and Teams Properties ([#4418](https://github.com/webiny/webiny-js/pull/4418))
 
-✍️
+When using [Cognito Federation](https://www.webiny.com/docs/enterprise/cognito-federation), via the `getIdentity` callback, developers have the ability to customize the identity object.
 
+This is useful when you need to add additional properties to the identity object, such as groups or teams, which can then be used for authorization purposes.
+
+But, there was an issue with how the identity's groups and teams-related properties were handled. Previously, only the `group` property was handled. Now, all of the following properties are handled:
+
+- `group`
+- `groups`
+- `team`
+- `teams`
+
+This change ensures that the identity object is correctly processed, and that the groups and teams properties are correctly loaded and used for authorization purposes.
+
+### Fixed Loading of Teams When Using 3rd Party IdPs ([#4419](https://github.com/webiny/webiny-js/pull/4419))([#4420](https://github.com/webiny/webiny-js/pull/4420))
+
+When using 3rd party IdPs, such as Okta or [Cognito Federation](https://www.webiny.com/docs/enterprise/cognito-federation), and using the `getIdentity` callback to customize the identity object, assigning teams to the identity object was not working correctly.
+
+More specifically, resolving security roles from teams that were created via the Admin app was not working as expected. On the other hand, teams that were define programmatically were working as expected.
+
+This issue has been fixed, and now, when using the `getIdentity` callback, teams are correctly loaded and assigned to the identity object.
