feat:create 5.41.4 release notes

--- a/docs/release-notes/5.41.4/changelog.mdx
+++ b/docs/release-notes/5.41.4/changelog.mdx
@@ -25,7 +25,7 @@ This change ensures that the identity object is correctly processed, and that th
 
 ### Fixed Loading of Teams When Using 3rd Party IdPs ([#4419](https://github.com/webiny/webiny-js/pull/4419))([#4420](https://github.com/webiny/webiny-js/pull/4420))
 
-When using 3rd party IdPs, such as Okta or [Cognito Federation](https://www.webiny.com/docs/enterprise/cognito-federation), and using the `getIdentity` callback to customize the identity object, assigning teams to the identity object was not working correctly.
+When using 3rd party IdPs, such as [Okta](/docs/enterprise/okta-integration) or [Cognito Federation](https://www.webiny.com/docs/enterprise/cognito-federation), and using the `getIdentity` callback to customize the identity object, assigning teams to the identity object was not working correctly.
 
 More specifically, resolving security roles from teams that were created via the Admin app was not working as expected. On the other hand, teams that were define programmatically were working as expected.
 
