docs: fixed typo

--- a/docs/developer-docs/5.41.x/headless-cms/ai/smart-seo-open-ai.mdx
+++ b/docs/developer-docs/5.41.x/headless-cms/ai/smart-seo-open-ai.mdx
@@ -22,7 +22,7 @@ This feature is available since Webiny **v5.41.0**.
 
 ## Overview
 
-Webiny is an AI model-agnostic platform. You can integrate with different models and craft tailored AI-experiences. You control which model and what AI-powered capabilities your users and content editors can use.
+Webiny is an AI model-agnostic platform. You can integrate it with different models and craft tailored AI-experiences. You control which model and what AI-powered capabilities your users and content editors can use.
 
 In this tutorial, we will demonstrate how to integrate OpenAI with Webiny to build a Smart SEO tool for Headless CMS. This tool will automatically generate SEO titles and tags for your articles.
 
