fix: add missing { name: "content.i18n" } perms

--- a/docs/developer-docs/5.41.x/security/extensions/programmatically-create-roles-and-teams.mdx
+++ b/docs/developer-docs/5.41.x/security/extensions/programmatically-create-roles-and-teams.mdx
@@ -71,7 +71,7 @@ export const createExtension = () => {
             id: "full-cms-access",
             name: "Full CMS Access",
             description: "Full access to the CMS application",
-            permissions: [{ name: "cms.*" }]
+            permissions: [{ name: "cms.*" }, { name: "content.i18n" }]
         })
     ];
 };
@@ -121,13 +121,13 @@ export const createExtension = () => {
             id: "full-cms-access",
             name: "Full CMS Access",
             description: "Full access to the CMS application",
-            permissions: [{ name: "cms.*" }]
+            permissions: [{ name: "cms.*" }, { name: "content.i18n" }]
         }),
         createSecurityRolePlugin({
             id: "full-pb-access",
             name: "Full Page Builder",
             description: "Full access to the Page Builder application",
-            permissions: [{ name: "pb.*" }]
+            permissions: [{ name: "pb.*" }, { name: "content.i18n" }]
         }),
         
         // Team that consists of the "Full CMS Access" and "Full Page Builder" roles.
@@ -169,14 +169,14 @@ export const createExtension = () => {
             id: "full-cms-access",
             name: "Full CMS Access",
             description: "Full access to the CMS application",
-            permissions: [{ name: "cms.*" }],
+            permissions: [{ name: "cms.*" }, { name: "content.i18n" }],
 +           tenant: "root"
         }),
         createSecurityRolePlugin({
             id: "full-pb-access",
             name: "Full Page Builder",
             description: "Full access to the Page Builder application",
-            permissions: [{ name: "pb.*" }],
+            permissions: [{ name: "pb.*" }, { name: "content.i18n" }],
 +           tenant: "root"
         }),
 
