docs: improved the details on customizing the AI example for different models

--- a/docs/developer-docs/5.41.x/headless-cms/ai/smart-seo-open-ai.mdx
+++ b/docs/developer-docs/5.41.x/headless-cms/ai/smart-seo-open-ai.mdx
@@ -96,7 +96,11 @@ Here is the [code for the Field Tracker](https://github.com/webiny/webiny-exampl
 
 We’ve also [decorated the useBind hook](https://github.com/webiny/webiny-examples/blob/master/headless-cms/smart-seo-open-ai/5.41.x/extensions/smartSeoOpenAi/src/DecorateContentEntryFormBind.tsx) to integrate field tracking specifically for models. In this example, we are tracking rich-text fields and SEO-specific fields (`seoTitle`, `seoDescription`, `seoMetaTags`) in the `Article` model. This allows us to trigger dynamic updates and facilitate interactions with external services.
 
-**You can customize this decorator (file) to track fields from other models or different field types, tailoring it to your specific use case.**
+<Alert type="info">
+
+  You can customize [this ContentEntryFormBind decorator file](https://github.com/webiny/webiny-examples/blob/master/headless-cms/smart-seo-open-ai/5.41.x/extensions/smartSeoOpenAi/src/DecorateContentEntryFormBind.tsx) to track fields from other models or different field types, tailoring it to your specific use case.
+
+</Alert>
 
 ### Extract HTML from RichTextHtml (Lexical Editor)
 Webiny leverages the [Lexical text editor](https://lexical.dev/) for Rich Text Fields. However, for generating SEO-related information using OpenAI, we will send the HTML content (not the Lexical format). To achieve this, we need to extract the HTML content from the Rich Text field. For this purpose, we have created a [extractFromRichText transformer](https://github.com/webiny/webiny-examples/blob/master/headless-cms/smart-seo-open-ai/5.41.x/extensions/smartSeoOpenAi/src/extractFromRichText.ts) to handle the conversion.
@@ -105,5 +109,12 @@ Webiny leverages the [Lexical text editor](https://lexical.dev/) for Rich Text F
 This is the [primary plugin (SmartSeo.tsx)](https://github.com/webiny/webiny-examples/blob/master/headless-cms/smart-seo-open-ai/5.41.x/extensions/smartSeoOpenAi/src/SmartSeo.tsx) that integrates Webiny with OpenAI. It sends the HTML content to OpenAI and retrieves SEO-related information. The received data is then used to update the corresponding fields in the model.
 
 If you’ve noticed the AI-Optimized SEO button on the Content Entry form, it has been configured in this plugin using the [ContentEntryEditorConfig](https://github.com/webiny/webiny-examples/blob/63c125f10a1dfc3097e2d9da2c5b0d8c903c15ae/headless-cms/smart-seo-open-ai/5.41.x/extensions/smartSeoOpenAi/src/SmartSeo.tsx#L117).
+
+<Alert type="info">
+
+  We display the `AI-OPTIMIZED SEO` button on the Content Entry form for the content model with the ID `article`.
+  You can easily customize it to include your [content model IDs](https://github.com/webiny/webiny-examples/blob/63c125f10a1dfc3097e2d9da2c5b0d8c903c15ae/headless-cms/smart-seo-open-ai/5.41.x/extensions/smartSeoOpenAi/src/SmartSeo.tsx#L117) to display this button on the respective content model entry forms.
+
+</Alert>
 
 ![AI-optimized SEO Button](./assets/smart-seo-open-ai/ai-optimize-button.png)
